--- a/public/index.html
+++ b/public/index.html
@@ -824,10 +824,9 @@
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
-					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-					<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-
+					<li data-slide-to="0" class="active"></li>
+					<li data-slide-to="1"></li>
+					<li data-slide-to="2"></li>
 				</ol>
 
 				<!-- Wrapper for slides -->
@@ -841,8 +840,6 @@
 					<div class="item">
 						<img src="images/1_home/slide_3.png" alt="slide"/>
 					</div>
-
-
 				</div>
 
 				<!-- Controls -->
@@ -1168,18 +1165,19 @@
 							2F., No. 50, Ln.316, Ruiguang Rd., Neihu Dist., Taipei City <br/>
 							114, Taiwan
 						</div>
-						<form>
+						<form id="contactForm" action="/contact" method="post">
+
 							<div class="form-group">
-								<input type="text" class="form-control container-input grey" id="InputName" placeholder="Name">
+								<input type="text" class="form-control container-input grey" id="name" name="name" placeholder="Name">
 							</div>
 							<div class="form-group">
-								<input type="text" class="form-control container-input grey" id="InputEmail" placeholder="Email address">
+								<input type="text" class="form-control container-input grey" id="email" name="email" placeholder="Email address">
 							</div>
 							<div class="form-group">
-								<textarea class="form-control container-input grey" id="InputMessages" rows="6" placeholder="Fill some messages...."></textarea>
+								<textarea class="form-control container-input grey" id="message" name="message" rows="6" placeholder="Fill some messages...."></textarea>
 							</div>
 							<div class="form-group">
-								<button type="submit" class="btn container-button grey">Send</button>
+								<button type="submit" class="btn container-button grey" disabled="">Send</button>
 							</div>
 						</form>
 
@@ -1234,5 +1232,9 @@
 
 	<!-- Custom  -->
 	<script type="text/javascript" src="js/custom.js"></script>
+
+	<!-- Contact -->
+	<script type="text/javascript" src="js/contact.js"></script>
+
 </body>
 </html>
