image size optimize

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
 		}
 
 		#features {
-			background-image: url('images/5_features/features.png');
+			background-image: url('images/5_features/features.jpg');
 			background-size: 100% auto;
 			padding: 3% 0 55%;
 			background-repeat-y: no-repeat;
@@ -129,7 +129,7 @@
 		}
 
 		#partner {
-			background-image: url('images/6_partner/partners.png');
+			background-image: url('images/6_partner/partners.jpg');
 			background-size: 100% 100%;
 			padding-top: 6%;
 			padding-bottom: 6%;
@@ -327,7 +327,7 @@
 		}
 
 		#features {
-			background-image: url('images/5_features/features.png');
+			background-image: url('images/5_features/features.jpg');
 			background-size: 100% 100%;
 			padding: 112px 0 856px;
 		}
@@ -632,7 +632,7 @@
 	}
 
 	#about {
-		background-image: url('images/2_about/About.png');
+		background-image: url('images/2_about/About.jpg');
 		background-size: 100% 100%;
 		border-top: 2px solid #FFF;
 		padding-top: 15%;
@@ -640,7 +640,7 @@
 	}
 
 	#event {
-		background-image: url('images/3_event/Event.png');
+		background-image: url('images/3_event/Event.jpg');
 		background-size: 100% 100%;
 		width: 100%;
 		display: inline-block;
@@ -676,7 +676,7 @@
 	#Partners_a { width: 100%; }
 
 	#organisation {
-		background-image: url('images/7_team/team.png');
+		background-image: url('images/7_team/team.jpg');
 		background-size: 100% 100%;
 		padding-top: 8%;
 		padding-bottom: 5%;
@@ -832,13 +832,13 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner">
 					<div class="item active">
-						<img src="images/1_home/slide_1.png" alt="slide"/>
+						<img src="images/1_home/slide_1.jpg" alt="slide"/>
 					</div>
 					<div class="item">
-						<img src="images/1_home/slide_2.png" alt="slide"/>
+						<img src="images/1_home/slide_2.jpg" alt="slide"/>
 					</div>
 					<div class="item">
-						<img src="images/1_home/slide_3.png" alt="slide"/>
+						<img src="images/1_home/slide_3.jpg" alt="slide"/>
 					</div>
 				</div>
 
@@ -1102,7 +1102,7 @@
 				</div>
 				<div class="row workers">
 
-					<div class="col-md-3 col-sm-6"><img src="images/7_team/Jeremy.png" /></div>
+					<div class="col-md-3 col-sm-6"><img src="images/7_team/Jeremy.jpg" /></div>
 					<div class="col-md-3 col-sm-6 team-yellow">
 						<div class="worker-info">
 							<span class="worker-name">Jeremy Lu</span>
