adjust fb button

--- a/public/index.html
+++ b/public/index.html
@@ -871,7 +871,7 @@
 							logistics to the after­sales technical support process.<br/>
 						</div>
 						<div style="margin-top: 25px; text-align: right">
-							<div class="fb-like"></div>
+							<div class="fb-like" data-share="true" data-layout="button_count" data-width="300"></div>
 						</div>
 					</div>
 					<div class="col-md-8 col-sm-7 col-last"></div>
