fix index.html version problem

--- a/public/index.old.html
+++ b/public/index.old.html
@@ -119,7 +119,7 @@
 		}
 
 		#features {
-			background-image: url('images/5_features/features.png');
+			background-image: url('images/5_features/features.jpg');
 			background-size: 100% auto;
 			padding: 3% 0 55%;
 			background-repeat-y: no-repeat;
@@ -129,7 +129,7 @@
 		}
 
 		#partner {
-			background-image: url('images/6_partner/partners.png');
+			background-image: url('images/6_partner/partners.jpg');
 			background-size: 100% 100%;
 			padding-top: 6%;
 			padding-bottom: 6%;
@@ -143,11 +143,9 @@
 		, #logo_foxconn{ height: auto; }
 		.partner-title {
 			padding: 8px 0 5px 7px;
-
-		}
-		.partner-container {
 			margin-top: 6%;
-			margin-bottom: 6%;
+			margin-left: -15px;
+			margin-right: -15px;
 		}
 		.logo-rim {
 			border: 1px solid #989898;
@@ -329,7 +327,7 @@
 		}
 
 		#features {
-			background-image: url('images/5_features/features.png');
+			background-image: url('images/5_features/features.jpg');
 			background-size: 100% 100%;
 			padding: 112px 0 856px;
 		}
@@ -634,7 +632,7 @@
 	}
 
 	#about {
-		background-image: url('images/2_about/About.png');
+		background-image: url('images/2_about/About.jpg');
 		background-size: 100% 100%;
 		border-top: 2px solid #FFF;
 		padding-top: 15%;
@@ -642,7 +640,7 @@
 	}
 
 	#event {
-		background-image: url('images/3_event/Event.png');
+		background-image: url('images/3_event/Event.jpg');
 		background-size: 100% 100%;
 		width: 100%;
 		display: inline-block;
@@ -678,7 +676,7 @@
 	#Partners_a { width: 100%; }
 
 	#organisation {
-		background-image: url('images/7_team/team.png');
+		background-image: url('images/7_team/team.jpg');
 		background-size: 100% 100%;
 		padding-top: 8%;
 		padding-bottom: 5%;
@@ -826,25 +824,22 @@
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
-					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-					<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-
+					<li data-slide-to="0" class="active"></li>
+					<li data-slide-to="1"></li>
+					<li data-slide-to="2"></li>
 				</ol>
 
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner">
 					<div class="item active">
-						<img src="images/1_home/slide_1.png" alt="slide"/>
+						<img src="images/1_home/slide_1.jpg" alt="slide"/>
 					</div>
 					<div class="item">
-						<img src="images/1_home/slide_2.png" alt="slide"/>
+						<img src="images/1_home/slide_2.jpg" alt="slide"/>
 					</div>
 					<div class="item">
-						<img src="images/1_home/slide_3.png" alt="slide"/>
+						<img src="images/1_home/slide_3.jpg" alt="slide"/>
 					</div>
-
-
 				</div>
 
 				<!-- Controls -->
@@ -1035,26 +1030,6 @@
 				<div class="row">
 
 					<div class="col-sm-1 col-first"></div>
-					<div class="col-sm-5 visible-xs">
-
-						<div class="row" >
-
-							<div class="col-xs-12">
-								<div class="partner-title section-title green">Our Partner</div>
-							</div>
-							<div class="col-xs-12">
-								<div class="partner-container">
-									Based in Taiwan and China, KDH specialises in developing and manufacturing high - performance
-									Helmet and module for driving assistance with the goal of providing  added - value product
-									solutions to customers in the motorcycle industry. Our strategic partners are Foxconn & Topkey
-									and their factories are in China and Vietnam (FOXCONN VIETNAM) where we conduct our design
-									for manufacturing operations.
-								</div>
-							</div>
-
-						</div>
-
-					</div>
 					<div class="col-sm-5">
 						<div class="row">
 							<div class="col-md-12"><img id="Partners_a" src="images/6_partner/Partners_a.png"></div>
@@ -1071,7 +1046,7 @@
 						</div>
 					</div>
 					<div class="col-sm-1"></div>
-					<div class="col-sm-5 col-last hidden-xs">
+					<div class="col-sm-5 col-last">
 						<div class="row">
 
 							<div class="col-md-10">
@@ -1127,7 +1102,7 @@
 				</div>
 				<div class="row workers">
 
-					<div class="col-md-3 col-sm-6"><img src="images/7_team/Jeremy.png" /></div>
+					<div class="col-md-3 col-sm-6"><img src="images/7_team/Jeremy.jpg" /></div>
 					<div class="col-md-3 col-sm-6 team-yellow">
 						<div class="worker-info">
 							<span class="worker-name">Jeremy Lu</span>
@@ -1218,7 +1193,9 @@
 				<div class="container" id="footer">
 					<div class="row">
 						<div class="col-sm-12" style="text-align: center; font-size: 0.9em; color:#777;">
-							All reserved by KDH - Design House © 2015
+
+							<p>All reserved by KDH - Design House © 2015</p>
+
 						</div>
 
 					</div>
