--- a/public/index.html
+++ b/public/index.html
@@ -381,40 +381,47 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 
 				<div class="row organisation-container">
 
-					<div class="col-sm-8 col-xs-5">
+					<div class="col-sm-8 col-xs-12">
 						More than 30 dedicated customer focus team members at KDH, Foxconn Vietnam &amp; Hsinchu sites.
 					</div>
-					<div class="col-sm-4 col-xs-5">
+					<div class="col-sm-4 col-xs-12">
 						<img id="team_chart" src="images/7_team/team_chart.png" />
 					</div>
 
 				</div>
 				<div class="row imgs">
 
-					<div class="col-sm-3 col-xs-3"><img id="team_A" src="images/7_team/team_A.png" /></div>
-					<div class="col-sm-3 col-xs-3"><img id="team_B" src="images/7_team/team_B.png" /></div>
-					<div class="col-sm-3 col-xs-3"><img id="team_C" src="images/7_team/team_C.png" /></div>
-					<div class="col-sm-3 col-xs-3"><img id="team_D" src="images/7_team/team_D.png" /></div>
+					<div class="col-sm-3 hidden-xs"><img id="team_A" src="images/7_team/team_A.png" /></div>
+					<div class="col-sm-3 col-xs-4"><img id="team_B" src="images/7_team/team_B.png" /></div>
+					<div class="col-sm-3 col-xs-4"><img id="team_C" src="images/7_team/team_C.png" /></div>
+					<div class="col-sm-3 col-xs-4"><img id="team_D" src="images/7_team/team_D.png" /></div>
 
 				</div>
 				<div class="row workers">
 
-					<div class="col-md-3 col-xs-6"><img src="images/7_team/Jeremy.png" /></div>
-					<div class="col-md-3 col-xs-6 team-yellow">
+					<div class="col-md-3 col-xs-12 text-center">
+						<img src="images/7_team/Jeremy.png" />
+					</div>
+
+					<div class="col-md-3 col-xs-12 team-yellow">
 						<div class="worker-info">
 							<span class="worker-name">Jeremy Lu</span>
 							<hr/>
 							<span class="worker-function">Managing Director & Founder</span>
 						</div>
 					</div>
-					<div class="col-md-3 col-xs-6 team-green">
+
+					<div class="col-md-3 col-xs-12 team-green">
 						<div class="worker-info">
 							<span class="worker-name">Younger L. Liang</span>
 							<hr/>
 							<span class="worker-function">CTO & Co-founder</span>
 						</div>
 					</div>
-					<div class="col-md-3 col-xs-6"><img src="images/7_team/Younger.png" /></div>
+
+					<div class="col-md-3 col-xs-12 text-center">
+						<img src="images/7_team/Younger.png" />
+					</div>
 
 				</div>
 
