--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
 							<span class="icon-bar"></span>
 						</button>
 
-						<a id="KDH_logo_a" class="hidden-xs" href="#home" >
+						<a id="KDH_logo_a" class="hidden-sm" href="#home" >
 							<img src="images/KDH_logo_a.png" />
 						</a>
 						<img class="navbar-brand hidden-sm" src="images/KDH_logo_b.png"/>
@@ -384,30 +384,42 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 					<div class="col-sm-8 col-xs-12">
 						More than 30 dedicated customer focus team members at KDH, Foxconn Vietnam &amp; Hsinchu sites.
 					</div>
-					<div class="col-sm-4 col-xs-12">
+					<div class="col-sm-4 col-xs-12 text-center">
 						<img id="team_chart" src="images/7_team/team_chart.png" />
 					</div>
 
 				</div>
 				<div class="row imgs">
 
-					<div class="col-sm-3 hidden-xs"><img id="team_A" src="images/7_team/team_A.png" /></div>
-					<div class="col-sm-3 col-xs-4"><img id="team_B" src="images/7_team/team_B.png" /></div>
-					<div class="col-sm-3 col-xs-4"><img id="team_C" src="images/7_team/team_C.png" /></div>
-					<div class="col-sm-3 col-xs-4"><img id="team_D" src="images/7_team/team_D.png" /></div>
+					<div class="col-sm-3 col-xs-12 text-center"><img id="team_A" src="images/7_team/team_A.png" /></div>
+					<div class="col-sm-3 col-xs-12 text-center"><img id="team_B" src="images/7_team/team_B.png" /></div>
+					<div class="col-sm-3 col-xs-12 text-center"><img id="team_C" src="images/7_team/team_C.png" /></div>
+					<div class="col-sm-3 col-xs-12 text-center"><img id="team_D" src="images/7_team/team_D.png" /></div>
 
 				</div>
+
+				<div class="row">
+					<div class="col-xs-12 col-sm-6">
+						<img src="images/7_team/jeremy_ourteam.png" alt="" />
+					</div>
+					<div class="col-xs-12 col-sm-6">
+						<img src="images/7_team/younger_ourteam.png" alt="" />
+					</div>
+				</div>
+<!--
 				<div class="row workers">
 
 					<div class="col-md-3 col-xs-12 text-center">
 						<img src="images/7_team/Jeremy.png" />
 					</div>
 
-					<div class="col-md-3 col-xs-12 team-yellow">
-						<div class="worker-info">
-							<span class="worker-name">Jeremy Lu</span>
-							<hr/>
-							<span class="worker-function">Managing Director & Founder</span>
+					<div class="col-md-3 col-xs-12 text-center">
+						<div class="team-yellow">
+							<div class="worker-info">
+								<span class="worker-name">Jeremy Lu</span>
+								<hr/>
+								<span class="worker-function">Managing Director & Founder</span>
+							</div>
 						</div>
 					</div>
 
@@ -424,6 +436,7 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 					</div>
 
 				</div>
+			-->
 
 			</div>
 		</section> <!-- #/organisation -->
@@ -542,5 +555,13 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 
 	<!-- Contact -->
 	<script type="text/javascript" src="js/contact.js"></script>
+
+	<script type="text/javascript">
+	$(function() {
+		if (/iPad|iPhone|iPod/.test(navigator.platform)) {
+			$('section.slice').addClass('ios');
+		}
+	});
+	</script>
 </body>
 </html>
