--- a/public/index.html
+++ b/public/index.html
@@ -389,7 +389,7 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 					</div>
 
 				</div>
-				<div class="row imgs">
+				<div class="row imgs hide">
 
 					<div class="col-sm-3 col-xs-12 text-center"><img id="team_A" src="images/7_team/team_A.png" /></div>
 					<div class="col-sm-3 col-xs-12 text-center"><img id="team_B" src="images/7_team/team_B.png" /></div>
@@ -398,7 +398,7 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 
 				</div>
 
-				<div class="row">
+				<div class="row" style="margin-top:250px;">
 					<div class="col-xs-12 col-sm-6">
 						<img src="images/7_team/jeremy_ourteam.png" alt="" />
 					</div>
