--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 					<div class="col-md-4 col-sm-6 col-first">
 						<div class="about-title section-title red">About Us</div>
 						<div class="about-container">
-							KDH's hybrid DNA of the engineering house and the
+							JARVISH's hybrid DNA of the engineering house and the
 							service vendor guarantees the most ideal solution for
 							product design optimized for the digital helmet devices.
 							Turning your requirements of marketing purposes into the
@@ -211,14 +211,14 @@
 					<div class="col-lg-6 col-md-7 col-sm-9 col-last">
 						<div class="event-title section-title green">Press & Recent Events</div>
 						<div class="event-container">
-							<h3 class="event-subtitle">KDH Design Closes $1M Seed Financing, Led by Hazel Asset<br/> Management and Vectr Ventures</h3>
+							<h3 class="event-subtitle">JARVISH Design Closes $1M Seed Financing, Led by Hazel Asset<br/> Management and Vectr Ventures</h3>
 
 							<p>TAIPEI, TAIWAN – (Jul 10, 2015) –<br/>
 							<br/>
-							KDH Design Co., Ltd., designer of intelligent vehicle systems, has completed
+							JARVISH Design Co., Ltd., designer of intelligent vehicle systems, has completed
 							an $1 million seed round financing led by Hazel Asset Management, Vectr
 							Ventures and selected angel investors.  Proceeds from this financing will fund
-							development of KDH’s advanced intelligent vehicle systems.  KDH intends to
+							development of JARVISH’s advanced intelligent vehicle systems.  JARVISH intends to
 							use this financing to bring top industry technologists to join in its vision for a
 							safer and enjoyable riding and driving experiences through Augmented Reality.<br/>
 							</p>
@@ -255,13 +255,13 @@
 						</div>
 						<div class="services-msgs red">
 							<div class="services-msg">
-KDH offer a Full Service digital helmet design. We applied the best-in-industry design methodology using the latest in Computer Aided Design software, and 3D prototyping technology to make sure our design fits into different types of motorcycle helmet.
+JARVISH offer a Full Service digital helmet design. We applied the best-in-industry design methodology using the latest in Computer Aided Design software, and 3D prototyping technology to make sure our design fits into different types of motorcycle helmet.
 							</div>
 							<div class="services-msg">
-KDH owns an in-house optic design team able to make different HUD design at different positions and angles inside the helmet and project focused display images to the motorcyclist.
+JARVISH owns an in-house optic design team able to make different HUD design at different positions and angles inside the helmet and project focused display images to the motorcyclist.
 							</div>
 							<div class="services-msg">
-KDH sensors collect data from the motorcycle and parts e.g. tires, and the road &amp; weather conditions to generate calculated warning signals to motorcyclist which to prevent accidents at slippery road. The accident caused by the road condition accounts approximately 67% of all traffic accidents in recent years.
+JARVISH sensors collect data from the motorcycle and parts e.g. tires, and the road &amp; weather conditions to generate calculated warning signals to motorcyclist which to prevent accidents at slippery road. The accident caused by the road condition accounts approximately 67% of all traffic accidents in recent years.
 							</div>
 						</div>
 
@@ -279,10 +279,10 @@ KDH sensors collect data from the motorcycle and parts e.g. tires, and the road 
 Using the gestural interface and voice control, an intuitive UI displays the supportive information onthe HUD and assist the motorcyclist to play music, answer phone calls and watch front or rear camera views anytime.
 							</div>
 							<div class="services-msg">
-KDH Testing Procedure provides our helmet design a reliable testing process while complying to the latest helmet safety regulations, and electronic certification tests.
+JARVISH Testing Procedure provides our helmet design a reliable testing process while complying to the latest helmet safety regulations, and electronic certification tests.
 							</div>
 							<div class="services-msg">
-KDH will connect the motorcyclists and car drivers to the cloud and manage to calculate data generated from the helmet devices and camera images in real time. All contents created will become a real asset for safe drive with useful data, and also for security control.
+JARVISH will connect the motorcyclists and car drivers to the cloud and manage to calculate data generated from the helmet devices and camera images in real time. All contents created will become a real asset for safe drive with useful data, and also for security control.
 							</div>
 						</div>
 
@@ -319,7 +319,7 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 					</div>
 					<div class="col-xs-12">
 						<div class="partner-container">
-							Based in Taiwan and China, KDH specialises in developing and manufacturing high-performance
+							Based in Taiwan and China, JARVISH specialises in developing and manufacturing high-performance
 							Helmet and module for driving assistance with the goal of providing  added-value product
 							solutions to customers in the motorcycle industry. Our strategic partners are Foxconn &amp; Topkey
 							and their factories are in China and Vietnam (FOXCONN VIETNAM) where we conduct our design
@@ -353,7 +353,7 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 					<div class="col-sm-1"></div>
 					<div class="col-sm-5 col-last">
 						<div class="partner-container">
-							Based in Taiwan and China, KDH specialises in developing and manufacturing high-performance
+							Based in Taiwan and China, JARVISH specialises in developing and manufacturing high-performance
 							Helmet and module for driving assistance with the goal of providing  added-value product
 							solutions to customers in the motorcycle industry. Our strategic partners are Foxconn &amp; Topkey
 							and their factories are in China and Vietnam (FOXCONN VIETNAM) where we conduct our design
@@ -382,7 +382,7 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 				<div class="row organisation-container">
 
 					<div class="col-sm-8 col-xs-12">
-						More than 30 dedicated customer focus team members at KDH, Foxconn Vietnam &amp; Hsinchu sites.
+						More than 30 dedicated customer focus team members at JARVISH, Foxconn Vietnam &amp; Hsinchu sites.
 					</div>
 					<div class="col-sm-4 col-xs-12 text-center">
 						<img id="team_chart" src="images/7_team/team_chart.png" />
@@ -515,7 +515,7 @@ KDH will connect the motorcyclists and car drivers to the cloud and manage to ca
 				<div class="container" id="footer">
 					<div class="row">
 						<div class="col-sm-12" style="text-align: center; font-size: 0.9em; color:#777;">
-							All reserved by KDH - Design House © 2015
+							All reserved by JARVISH - Design House © 2015
 						</div>
 
 					</div>
