--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>KDH - Design Service</title>
-	<meta name="description" content="KDH delivers to anyone who's interested in joining the business various solutions of online ebook service, portable devices, including eReaders, tablets, and electronic book-bags.">
-	<meta name="author" content="KDH">
+	<title>JARVISH - Design Service</title>
+	<meta name="description" content="JARVISH delivers to anyone who's interested in joining the business various solutions of online ebook service, portable devices, including eReaders, tablets, and electronic book-bags.">
+	<meta name="author" content="JARVISH">
 	<!-- Mobile Specific Metas
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
