--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
 					<div class="col-lg-6 col-md-7 col-sm-9 col-last">
 						<div class="event-title section-title green">Press & Recent Events</div>
 						<div class="event-container">
-							<h3 class="event-subtitle">JARVISH Design Closes $1M Seed Financing, Led by Hazel Asset<br/> Management and Vectr Ventures</h3>
+							<h3 class="event-subtitle">JARVISH Closes $1M Seed Financing, Led by Hazel Asset<br/> Management and Vectr Ventures</h3>
 
 							<p>TAIPEI, TAIWAN – (Jul 10, 2015) –<br/>
 							<br/>
