deletion words & modify words

--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
 
 							<p>TAIPEI, TAIWAN – (Jul 10, 2015) –<br/>
 							<br/>
-							JARVISH Design Co., Ltd., designer of intelligent vehicle systems, has completed
+							JARVISH Inc., designer of intelligent vehicle systems, has completed
 							an $1 million seed round financing led by Hazel Asset Management, Vectr
 							Ventures and selected angel investors.  Proceeds from this financing will fund
 							development of JARVISH’s advanced intelligent vehicle systems.  JARVISH intends to
