modify footer sentence

--- a/public/index.html
+++ b/public/index.html
@@ -515,7 +515,7 @@ JARVISH will connect the motorcyclists and car drivers to the cloud and manage t
 				<div class="container" id="footer">
 					<div class="row">
 						<div class="col-sm-12" style="text-align: center; font-size: 0.9em; color:#777;">
-							All reserved by JARVISH - Design House © 2015
+							All reserved by JARVISH © 2015
 						</div>
 
 					</div>
