--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<!-- Custom css -->
 	<link type="text/css" rel="stylesheet" href="css/layout.css">
+	<link type="text/css" rel="stylesheet" href="css/index.css">
 	<link type="text/css" id="colors" rel="stylesheet" href="css/custom.css">
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 	<script src="js/modernizr-2.6.1.min.js"></script>
@@ -219,9 +220,9 @@
 							use this financing to bring top industry technologists to join in its vision for a
 							safer and enjoyable riding and driving experiences through Augmented Reality.<br/>
 							</p>
+							<p><br/><br/></p>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</section> <!-- #/event -->
