--- a/public/index.html
+++ b/public/index.html
@@ -214,9 +214,9 @@
 							<p>TAIPEI, TAIWAN – (Jul 10, 2015) –<br/>
 							<br/>
 							JARVISH Inc., designer of intelligent vehicle systems, has completed
-							an $1 million seed round financing led by Hazel Asset Management, Vectr
-							Ventures and selected angel investors.  Proceeds from this financing will fund
-							development of JARVISH’s advanced intelligent vehicle systems.  JARVISH intends to
+							an $1 million seed round financing led by Hazel Asset Management and
+							selected angel investors.   Proceeds from this financing will fund development
+							of JARVISH’s advanced intelligent vehicle systems.  JARVISH intends to
 							use this financing to bring top industry technologists to join in its vision for a
 							safer and enjoyable riding and driving experiences through Augmented Reality.<br/>
 							</p>
