--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>JARVISH - Design Service</title>
+	<title>JARVISH - REDEFINING RECREATIONAL RIDE</title>
 	<meta name="description" content="JARVISH delivers to anyone who's interested in joining the business various solutions of online ebook service, portable devices, including eReaders, tablets, and electronic book-bags.">
 	<meta name="author" content="JARVISH">
 	<!-- Mobile Specific Metas
